@@ -531,6 +531,7 @@ item.zollernextras_crushedetrium.name=Crushed Etrium
 
 item.zollernextras_bedrockbreaker.name=Bedrock Breaker
 item.zollernextras_rokkite.name=Rokkite
+item.zollernextras_ascendantamaranthingot.name=Ascendant Amaranth Ingot
 
 entity.zollernextras:fish.name=Fish
 entity.zollernextras:jellyfish.name=Jellyfish
